fix: fix z-index of the top-bar

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,7 +18,8 @@ $animationWayLeft: translate3d(-400%, 400%, 0) scale(6) rotate(15deg);
     left: 0;
     color: #fff;
     width: 100%;
-    padding: 50px;
+		padding: 50px;
+		z-index: 10;
 }
 .top-bar{
     top: 0;
